--- a/student.ipynb
+++ b/student.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +435,7 @@
        "[21597 rows x 20 columns]"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -459,7 +459,7 @@
        "(21597, 20)"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "      dtype='object', name='id')"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -750,7 +750,7 @@
        "max       47.777600   -121.315000    6210.000000  871200.000000  "
       ]
      },
-     "execution_count": 133,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "[21597 rows x 10 columns]"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1007,7 @@
        "       '13 Mansion'], dtype=object)"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1038,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,7 @@
        "[19221 rows x 10 columns]"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -1529,7 +1529,7 @@
        "[19220 rows x 10 columns]"
       ]
      },
-     "execution_count": 139,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
        "yr_built       1975.00    1997.0     2015.0  "
       ]
      },
-     "execution_count": 140,
+     "execution_count": 159,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1747,7 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -1756,7 +1756,7 @@
        "<Axes: xlabel='bedrooms'>"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1777,7 +1777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -1843,33 +1843,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'new_grade'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3653\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3652\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3653\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3654\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/_libs/index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'new_grade'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/home/deq/dsc-phase-2-project-v2-3/student.ipynb Cell 25\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/deq/dsc-phase-2-project-v2-3/student.ipynb#X25sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m sns\u001b[39m.\u001b[39mcountplot(x\u001b[39m=\u001b[39mdf[\u001b[39m'\u001b[39m\u001b[39mnew_grade\u001b[39m\u001b[39m'\u001b[39m])\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3759\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3760\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3761\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mget_loc(key)\n\u001b[1;32m   3762\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3763\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/pandas/core/indexes/base.py:3655\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3653\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3654\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3655\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3656\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3657\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3658\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3659\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3660\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'new_grade'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sns.countplot(x=df['new_grade'])"
+    "# sns.countplot(x=df['new_grade'])"
    ]
   },
   {
