Project heading and overview

--- a/student.ipynb
+++ b/student.ipynb
@@ -4,29 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final Project Submission\n",
+    "## Phase 2 Data Science Project.\n",
     "\n",
-    "Please fill out:\n",
     "* Student name: \n",
-    "    #### - Jubilant Mutuku jubilant.mutuku@student.moringaschool.com\n",
-    "    #### - Esther Nyawera esther.nyawera@student.moringaschool.com\n",
-    "    #### - Miriam Nguru miriam.nguru@student.moringaschool.com\n",
-    "    #### - Yusra Mohamed yusra.mohamed1@student.moringaschool.com\n",
-    "    #### - Ian Kedeyie ian.kedeyie@student.moringaschool.com\n",
-    "    #### - Abdideq Adan abdideq.adan@student.moringaschool.com\n",
+    "    #### - Jubilant Mutuku\n",
+    "    #### - Esther Nyawera\n",
+    "    #### - Miriam Nguru \n",
+    "    #### - Yusra Mohamed \n",
+    "    #### - Ian Kedeyie \n",
+    "    #### - Abdideq Adan \n",
     "\n",
     "\n",
-    "* Student pace: full time\n",
+    "* Student pace:Full time DSTF-06\n",
     "* Scheduled project review date/time: \n",
-    "* Instructor name: \n",
-    "* Blog post URL:\n"
+    "* Instructor name: Diana Mongina, Lucile Kaleha, Nikita Njoroge\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Heading"
+    "## ## Multiple Linear Regression Modeling to analyze house sales in King County "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#"
    ]
   },
   {
@@ -40,9 +46,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "The aim of this project is to develop a Multiple Linear Regression Model to accurately predict the sale prices of houses in King County. Through careful data analysis and exploratory data analysis techniques, we will preprocess and clean the dataset to create a dataframe for regression modeling. By  analyzing key features such as square footage, number of bedrooms, location(waterfront or not), and more, we aim to uncover valuable insights that influence house prices."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2. Business Objective\n",
-    "Business understanding is essential for a real estate agency to effectively serve its clients.It serves as the foundation for successful operations and sustainable growth in the real estate industry.You need to understand the listing prices and how it affects buyers and sellers in making informed decisions. Identifying the expectations, preferences and needs of the clients, knowing what the clients want from the agency’s services especially in terms of property evaluation is crucial. Factors considered in evaluation are: I. Size and layout, the size of the property, the number of bedrooms and bathrooms and the layout is crucial. II. Condition, the property’s condition, including any need of repairs or renovations can affect its value. III. Location: The property location influences its value, factors like proximity to school, parks, shopping malls and transportation can impact the value Gaining insight into the local housing market dynamics in the dataset such as the fluctuations in supply and demand, seasonality, and regional variations in property value is important .\n",
-    "\n"
+    "Business understanding is essential for a real estate agents, realtors and sellers to effectively serve their clients.It serves as the foundation for successful operations and sustainable growth in the real estate industry.We will need to understand the listing prices and how they affects buyers and sellers in making informed decisions. Identifying the expectations, preferences and needs of the clients, knowing what the clients want from the agency’s services especially in terms of property evaluation is crucial. Factors considered in evaluation are: I. Size and layout, the size of the property, the number of bedrooms and bathrooms and the layout is crucial. II. Condition, the property’s condition, including any need of repairs or renovations can affect its value. III. Location: The property location influences its value, factors like proximity to school, parks, shopping malls and transportation can impact the value Gaining insight into the local housing market dynamics in the dataset such as the fluctuations in supply and demand, seasonality, and regional variations in property value is important .\n",
+    "\n",
+    " "
    ]
   },
   {
