--- a/student.ipynb
+++ b/student.ipynb
@@ -1955,13 +1955,230 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.1 univariate analysis "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-8dca0bc3a12a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#univariate analysis for price\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"price\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescribe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#univariate analysis for price \n",
+    "df[\"price\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the analysis above we can conclude that the dataset contains a diverse range of house prices, with a minimum price of $78,000 and a maximum price of $7,700,000.\n",
+    "\n",
+    "The mean and median prices are relatively close, which suggests that the distribution of prices may be roughly symmetric. However, the high standard deviation indicates that there is considerable variability in prices, and the distribution might be right-skewed due to a few extremely high-priced houses.\n",
+    "\n",
+    "The interquartile range (the difference between the 25th and 75th percentiles) is from approximately $322,000 to $645,000, indicating that the middle 50% of houses in the dataset falls within this price range.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#univariate analysis for grade feature\n",
+    "df['grade'].value_counts().to_frame()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The 'grade' feature's distribution reflects the quality and overall grade of houses in the dataset, which can be an important factor influencing their prices.  The grades are represented by numerical values with 1 being the most poorest and 11 being a mansion.Grade 5 is the most frequent, suggesting that many houses are of average quality.\n",
+    "Only one house falls into the lowest grade category, grade 1.\n",
+    "The distribution of grades provides insights into the quality and desirability of houses in the dataset, with the majority falling within the average to slightly above-average range.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#univariate analysis for condition feature\n",
+    "df['condition'].value_counts().to_frame()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This analysis provides an overview of the distribution of houses based on their condition. The majority of houses fall into Condition 4, which suggests that a significant portion of the houses in the dataset are in \"average\" condition. Condition 3 also represents a substantial number of houses, indicating that many are in \"average\" or \"good\" condition.\n",
+    "\n",
+    "On the other hand, there are a smaller number of houses in Conditions 5, 1, and 2. These conditions may represent houses in \"very good,\" \"poor,\" or \"fair\" conditions, respectively.\n",
+    "\n",
+    "It's essential to consider the condition of the house as it can significantly impact its price and other characteristics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.2 Bivariate analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#bivariate analysis\n",
+    "\n",
+    "\n",
+    "# Create a boxplot to compare prices for houses with and without a waterfront view\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='waterfront', y='price', data=df)\n",
+    "plt.title('Price Distribution for Houses with and without Waterfront View')\n",
+    "plt.xlabel('Waterfront View')\n",
+    "plt.ylabel('Price')\n",
+    "plt.xticks([0, 1], ['No Waterfront', 'Waterfront'])\n",
+    "# Show the plot\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the analysis above, we can draw the following conclusions:\n",
+    "\n",
+    "Houses with a waterfront view tend to have a wider price distribution compared to houses without a waterfront view. This is evident from the larger spread of prices in the boxplot for waterfront houses.\n",
+    "Houses with a waterfront view generally have a higher upper quartile (75th percentile) price range compared to houses without a waterfront view, as indicated by the upper end of the box in the boxplot.\n",
+    "\n",
+    "Houses without a waterfront view have a higher concentration of prices in the lower quartile (25th percentile) range, suggesting that they are generally more affordable than waterfront houses."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "multivariate analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#multivariate analysis\n",
+    "#We can use the Pandas method corr() to find the feature other than price that is most correlated with price\n",
+    "\n",
+    "df.corr()['price'].sort_values()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate the correlations\n",
+    "correlations = df.corr()\n",
+    "\n",
+    "# Create a heatmap\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.heatmap(correlations, annot=True, cmap='coolwarm', linewidths=0.5)\n",
+    "plt.title('Correlation Heatmap')\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "This analysis helps us understand which features are more strongly associated with the price of a house. It suggests that features related to the size, quality, and specific amenities of a house, such as sqft_living, grade, and waterfront view, have a significant impact on the house's price."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.pairplot(df)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a figure and a set of subplots for each column\n",
+    "fig, axes = plt.subplots(nrows=2, ncols=4, figsize=(16, 8))\n",
+    "\n",
+    "# Specify the numerical columns for which you want to create box plots\n",
+    "numerical_columns = ['price', 'bedrooms', 'bathrooms', 'sqft_living', 'sqft_lot', 'floors', 'yr_built']\n",
+    "\n",
+    "# Loop through the columns and create box plots\n",
+    "for i, col in enumerate(numerical_columns):\n",
+    "    sns.boxplot(data, x=col, ax=axes[i//4, i%4])\n",
+    "    axes[i//4, i%4].set_title(f'Box Plot of {col}')\n",
+    "    axes[i//4, i%4].set_xlabel('')  # Remove x-axis label for better readability\n",
+    "\n",
+    "# Adjust the layout\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenvname",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "myenvname"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1973,7 +2190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
