--- a/student.ipynb
+++ b/student.ipynb
@@ -2464,9 +2464,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenvname",
    "language": "python",
-   "name": "python3"
+   "name": "myenvname"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2478,7 +2478,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
